# obmc-console

./: .clang-tidy  .gitignore  .travis.yml  BUILD.md  CHANGELOG.md  CONVERSION_SUMMARY.md  Dockerfile  MAINTAINERS  MUX-SUPPORT.md  Makefile.am  Makefile.simple  OWNERS  README.md  README_MAKE.md  SONIC_BUILD.md  bootstrap.sh  config-internal.h  config.c  config.h  config.mk  configure.ac  console-client-main.c  console-client.c  console-client.h  console-dbus.c  console-gpio.c  console-gpio.h  console-mux.c  console-mux.h  console-server-main.c  console-server.c  console-server.h  console-socket.c  dbus-handler.c  docker-build-test.sh  log-handler.c  log-handler.h  meson.build  meson.options  meson_options.txt  (+12 more)
conf/: 80-obmc-console-uart.rules.in  client.2200.conf.in  obmc-console-ssh.socket.in  obmc-console-ssh@.service.in  obmc-console-ssh@.service.openssh-in  obmc-console@.service.in  obmc-console@.socket.in  server.ttyVUART0.conf.in  sshd_config_port_2200
conf/example/muxed-uart/: server-uart-muxed-console1-example.conf  server-uart-muxed-console2-example.conf
conf/obmc-console-ssh@.service.d/: use-socket.conf.in
console-ctl/: activate-console.c  activate-console.h  console-ctl-main.c  console-ctl.c  console-ctl.h  dbus-helper.c  dbus-helper.h
docs/: mux-support.md
subprojects/: iniparser-4.2.1.wrap  iniparser.wrap  iniparser_meson.build
subprojects/iniparser-4.2.1/: meson.build
subprojects/packagefiles/iniparser/: meson.build
test/: Makefile.am  config-test-utils.c  config-test-utils.h  dbus-test-utils.c  meson.build  ringbuffer-test-utils.c  test-client-escape.c  test-config-parse-logsize.c  test-config-parse.c  test-config-resolve-console-id.c  test-console-activate-deactivate.c  test-console-client-can-read  test-console-client-can-write  test-console-client-no-args  test-console-logs-to-file  test-console-logs-to-file-no-sections  test-console-server-parse-args.c  test-console-socket-read  test-console-socket-write  test-log-handler.c  test-multiple-consoles  test-ringbuffer-boundary-poll.c  test-ringbuffer-boundary-read.c  test-ringbuffer-contained-offset-read.c  test-ringbuffer-contained-read.c  test-ringbuffer-poll-force.c  test-ringbuffer-read-commit.c  test-ringbuffer-simple-poll.c  wrapper.sh
test/integration_test/: console-server-test-util.c  console-server-test-util.h  dbus-test-utils.c  dbus-test-utils.h  test-call-activate-dbus-method.c  test-console-activate-deactivate.c  test-console-activate-deactivates-other.c  test-console-client-can-read.c  test-console-client-can-write.c  test-console-logs-to-file.c  test-console-socket-read-write.c
